<resources>
    <string name="app_name">Project</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="go_to_login">Go to Login</string>
    <string name="go_to_register">Go to Register</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="back">back</string>
    <string name="name">Name</string>
    <string name="create_entry">Create Entry</string>
    <string name="student_id">Student ID</string>
    <string name="store">Store</string>
    <string name="make_entry">Make entry</string>
    <string name="add_parent">Add Parent</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="scanner">Scanner</string>
    <string name="generate">Generate</string>
    <string name="generated">Generated</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="parent">Parent</string>
    <string name="teacher">Teacher</string>
    <string name="register_as">register as:</string>
    <string name="parent_name">Parent Name</string>
    <string name="license_number">License Number</string>
    <string name="see_profile">See Profile</string>
    <string name="editinfo">editinfo</string>
    <string name="searchinfo">searchinfo</string>
    <string name="pickup_pal">Pickup Pal</string>
    <string name="todo">todo</string>
    <string name="are_you_picking_up_your_child">Are you Picking up your child?</string>
    <string name="time">time</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="teacher_profile">Teacher Profile</string>
    <string name="qr_code_join_queue">QR Code(join queue)</string>
    <string name="phone">Phone</string>
    <string name="class_id">Class Id</string>
    <string name="view_profile">View Profile</string>
    <string name="teacher_page">Teacher Page</string>
    <string name="was_your_child_picked_up_safely">Was your child picked up safely?</string>
    <string name="view_position_in_queue">View Position in Queue</string>
    <string name="join_queue">Join Queue</string>
</resources>