<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tParentProfile">

    <ImageView
        android:id="@+id/profile_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"

        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_below="@id/profile_image_view"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:layout_below="@id/profile_image_view"
        android:layout_toEndOf="@+id/fname"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/PhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_below="@id/fname"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@id/PhoneNo"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/back"
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        />






</RelativeLayout>