<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teacherMain">

    <Button
        android:id="@+id/editinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editinfo"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/searchinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchinfo"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="bottom"
        android:text="@string/scanner" />

    <Button
        android:id="@+id/qrgen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="290dp"
        />

</RelativeLayout>